// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> should render 1`] = `
<div>
  <form
    action="/recherche"
    class="sc-ellfGf bAscX"
    role="search"
  >
    <div
      class="sc-gXfVKN gNNUJi"
    >
      <label>
        Rechercher
      </label>
    </div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-1"
      role="combobox"
      style="flex: 1 1 auto;"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-label="recherchez par mots-clés"
        autocomplete="off"
        class="sc-iIgjPs edChZz"
        id="main-search-input"
        name="q"
        placeholder="Rechercher"
        title="recherchez par mots-clés"
        type="search"
        value=""
      />
      <div
        class="sc-jtiXyc epYyJZ"
        id="react-autowhatever-1"
        role="listbox"
      />
    </div>
    <button
      aria-label="Lancer ma recherche"
      class="sc-hiKfDv dNqnKz sc-amkrK ctiiva"
      title="Lancer ma recherche"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="sc-kizEQm jMSoYK"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M27.319 25.368a.935.935 0 0 1-1.304 1.341l-6.256-6.012a9.797 9.797 0 0 1-6.092 2.1C8.327 22.798 4 18.59 4 13.4S8.328 4 13.667 4c5.338 0 9.666 4.208 9.666 9.399 0 2.245-.81 4.307-2.16 5.923l6.146 6.046zm-13.652-4.515c4.234 0 7.666-3.337 7.666-7.454 0-4.117-3.432-7.454-7.666-7.454C9.432 5.945 6 9.282 6 13.399c0 4.117 3.432 7.454 7.667 7.454z"
          fill="currentColor"
        />
      </svg>
    </button>
  </form>
</div>
`;

exports[`<SearchBar /> should render suggestions 1`] = `
<div>
  <form
    action="/recherche"
    class="sc-ellfGf bAscX"
    role="search"
  >
    <div
      class="sc-gXfVKN gNNUJi"
    >
      <label>
        Rechercher
      </label>
    </div>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-1"
      role="combobox"
      style="flex: 1 1 auto;"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-label="recherchez par mots-clés"
        autocomplete="off"
        class="sc-iIgjPs edChZz"
        id="main-search-input"
        name="q"
        placeholder="Rechercher"
        title="recherchez par mots-clés"
        type="search"
        value="yolo"
      />
      <div
        class="sc-jtiXyc epYyJZ"
        id="react-autowhatever-1"
        role="listbox"
      >
        <ul
          role="listbox"
          style="background: white; border: 1px solid silver; border-radius: 3px; box-shadow: 0 10px 10px -10px #b7bcdf; left: 0px; margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; position: absolute; right: 0px;"
        >
          <li
            aria-selected="false"
            data-suggestion-index="0"
            id="react-autowhatever-1--item-0"
            role="option"
            style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
          >
            <div
              class="sc-dvUynV ddAQyb"
            >
              <span
                class="sc-kTCsyW"
              >
                foo
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            data-suggestion-index="1"
            id="react-autowhatever-1--item-1"
            role="option"
            style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
          >
            <div
              class="sc-dvUynV ddAQyb"
            >
              <span
                class="sc-kTCsyW"
              >
                foobar
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            data-suggestion-index="2"
            id="react-autowhatever-1--item-2"
            role="option"
            style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
          >
            <div
              class="sc-dvUynV ddAQyb"
            >
              <span
                class="sc-kTCsyW"
              >
                foo bar ?
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            data-suggestion-index="3"
            id="react-autowhatever-1--item-3"
            role="option"
            style="border-radius: 3px; cursor: pointer; line-height: 2rem; list-style-type: none; padding: 5px;"
          >
            <div
              class="sc-dvUynV ddAQyb"
            >
              <span
                class="sc-kTCsyW"
              >
                foo bazzz
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <button
      aria-label="Lancer ma recherche"
      class="sc-hiKfDv dNqnKz sc-amkrK ctiiva"
      title="Lancer ma recherche"
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="sc-kizEQm jMSoYK"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M27.319 25.368a.935.935 0 0 1-1.304 1.341l-6.256-6.012a9.797 9.797 0 0 1-6.092 2.1C8.327 22.798 4 18.59 4 13.4S8.328 4 13.667 4c5.338 0 9.666 4.208 9.666 9.399 0 2.245-.81 4.307-2.16 5.923l6.146 6.046zm-13.652-4.515c4.234 0 7.666-3.337 7.666-7.454 0-4.117-3.432-7.454-7.666-7.454C9.432 5.945 6 9.282 6 13.399c0 4.117 3.432 7.454 7.667 7.454z"
          fill="currentColor"
        />
      </svg>
    </button>
  </form>
</div>
`;
